Добавил базовую стилизацию главной страницы

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,27 @@
-// Начните писать стили здесь
+@import "fonts.scss";
+@import "variables.scss";
+@import "mixins.scss";
+@import "body.scss";
+@import "global.scss";
+@import "page-header.scss";
+@import "menu.scss";
+@import "main-nav.scss";
+@import "button.scss";
+@import "intro.scss";
+@import "contact-list.scss";
+@import "social-list.scss";
+@import "authorization.scss";
+@import "quote.scss";
+@import "steps.scss";
+@import "about.scss";
+@import "directions.scss";
+@import "companions.scss";
+@import "user-card.scss";
+@import "tag-list.scss";
+@import "register.scss";
+@import "user-price.scss";
+@import "business-rates.scss";
+@import "interested.scss";
+@import "register-form.scss";
+@import "how-to-find.scss";
+@import "page-footer.scss";
