--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,19 +1,71 @@
 @font-face {
-  font-family: "Blogger Sans";
-  src: url("../fonts/bloggersans.woff2") format("woff2"),
-    url("../fonts/bloggersans.woff") format("woff"),
-    url("../fonts/bloggersans-bold.woff2") format("woff2"),
-    url("../fonts/bloggersans-bold.woff") format("woff"),
-    url("../fonts/bloggersans-bolditalic.woff2") format("woff2"),
-    url("../fonts/bloggersans-bolditalic.woff") format("woff"),
-    url("../fonts/bloggersans-italic.woff2") format("woff2"),
-    url("../fonts/bloggersans-italic.woff") format("woff"),
-    url("../fonts/bloggersans-light.woff2") format("woff2"),
-    url("../fonts/bloggersans-light.woff") format("woff"),
-    url("../fonts/bloggersans-lightitalic.woff2") format("woff2"),
-    url("../fonts/bloggersans-lightitalic.woff") format("woff"),
-    url("../fonts/bloggersans-medium.woff2") format("woff2"),
-    url("../fonts/bloggersans-medium.woff") format("woff"),
-    url("../fonts/bloggersans-mediumitalic.woff2") format("woff2"),
-    url("../fonts/bloggersans-mediumitalic.woff") format("woff");
+  font-family: "Bloggersans";
+  font-weight: normal;
+  font-style: normal;
+  src: local("Bloggersans"),
+    local("Bloggersans"),
+    url("../fonts/bloggersans.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Bloggersans";
+  font-weight: 800;
+  font-style: normal;
+  src: local("Bloggersans Bold"),
+    local("Bloggersans-Bold"),
+    url("../fonts/bloggersans-bold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Bloggersans";
+  font-weight: 800;
+  font-style: italic;
+  src: local("Bloggersans Bold Italic"),
+    local("Bloggersans-Bold-Italic"),
+    url("../fonts/bloggersans-bolditalic.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Bloggersans";
+  font-weight: normal;
+  font-style: italic;
+  src: local("Bloggersans Italic"),
+    local("Bloggersans-Italic"),
+    url("../fonts/bloggersans-italic.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Bloggersans";
+  font-weight: 300;
+  font-style: normal;
+  src: local("Bloggersans Light"),
+    local("Bloggersans-Light"),
+    url("../fonts/bloggersans-light.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Bloggersans";
+  font-weight: 300;
+  font-style: italic;
+  src: local("Bloggersans Light Italic"),
+    local("Bloggersans-Light-Italic"),
+    url("../fonts/bloggersans-lightitalic.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Bloggersans";
+  font-weight: 500;
+  font-style: normal;
+  src: local("Bloggersans Medium"),
+    local("Bloggersans-Medium"),
+    url("../fonts/bloggersans-medium.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Bloggersans";
+  font-weight: 500;
+  font-style: italic;
+  src: local("Bloggersans Medium Italic"),
+    local("Bloggersans-Medium-Italic"),
+    url("../fonts/bloggersans-lightitalic.woff") format("woff");
 }
