--- a/source/sass/register-form.scss
+++ b/source/sass/register-form.scss
@@ -1,11 +1,12 @@
 .register-form__content {
   @include flex;
-  justify-content: space-between;
+  // justify-content: space-between;
   background-color: $white;
   border-radius: 20px;
 }
 
 .register-form__input {
+  flex-grow: 2;
   border: none;
   border-radius: 20px;
   font-weight: bold;
@@ -13,4 +14,8 @@
   line-height: 18px;
   color: rgba($special-grey, 0.3);
   padding: 22px 25px;
+}
+
+.register-form__input::placeholder {
+  color: rgba($special-grey, 0.3);
 }
