Внес правки по рекомендации наставника

--- a/source/sass/page-body.scss
+++ b/source/sass/page-body.scss
@@ -1,4 +1,4 @@
-.page__body {
+.page-body {
   padding: 0 25px;
   margin: 0;
   font-family: $main-font;
@@ -8,7 +8,7 @@
   background-color: $basic-blue;
 }
 
-.page__title {
+.page-body__title {
   font-weight: bold;
   font-size: 36px;
   line-height: 40px;
