--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,7 +1,7 @@
 @import "fonts.scss";
 @import "variables.scss";
 @import "mixins.scss";
-@import "body.scss";
+@import "page-body.scss";
 @import "global.scss";
 @import "page-header.scss";
 @import "menu.scss";
