--- a/source/sass/how-to-find.scss
+++ b/source/sass/how-to-find.scss
@@ -10,6 +10,7 @@
 .how-to-find__adress {
   @include flex;
   font-weight: bold;
+  font-style: normal;
   font-size: 16px;
   line-height: 22px;
   text-transform: uppercase;
