--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,5 +1,5 @@
 // fonts
-$main-font: "Blogger Sans", "Tahoma", sans-serif;
+$main-font: "Bloggersans", "Tahoma", sans-serif;
 // colors
 $black: #000000;
 $white: #ffffff;
