--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,6 +10,7 @@
 @import "intro.scss";
 @import "contact-list.scss";
 @import "social-list.scss";
+@import "transport-list.scss";
 @import "authorization.scss";
 @import "quote.scss";
 @import "steps.scss";
@@ -17,6 +18,7 @@
 @import "directions.scss";
 @import "companions.scss";
 @import "user-card.scss";
+@import "user-score.scss";
 @import "tag-list.scss";
 @import "register.scss";
 @import "user-price.scss";
@@ -25,3 +27,9 @@
 @import "register-form.scss";
 @import "how-to-find.scss";
 @import "page-footer.scss";
+@import "profile.scss";
+@import "plans.scss";
+@import "planner.scss";
+@import "pagination.scss";
+@import "calendar.scss";
+@import "alphabet.scss";
