--- a/source/sass/directions.scss
+++ b/source/sass/directions.scss
@@ -2,7 +2,7 @@
   @include outline;
 
   background-color: $basic-blue-light;
-  padding: 71px 0 29px 0;
+  padding: 71px 25px 29px 25px;
   color: $basic-blue;
   border-radius: 25px;
 }
