--- a/source/sass/register-form.scss
+++ b/source/sass/register-form.scss
@@ -1,11 +1,13 @@
 .register-form__content {
   @include flex;
-  // justify-content: space-between;
+
+  font-family: $main-font;
   background-color: $white;
   border-radius: 20px;
 }
 
 .register-form__input {
+  font-family: $main-font;
   flex-grow: 2;
   border: none;
   border-radius: 20px;
@@ -17,5 +19,6 @@
 }
 
 .register-form__input::placeholder {
+  font-family: $main-font;
   color: rgba($special-grey, 0.3);
 }
