--- a/source/sass/menu.scss
+++ b/source/sass/menu.scss
@@ -1,6 +1,7 @@
 .menu {
   // display: none;
-  padding: 25px;
+  text-align: center;
+  padding: 25px 25px 25px 0;
   background-color: $white;
   color: $special-midnight;
 }
