--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,6 +6,7 @@
 @import "page-header.scss";
 @import "menu.scss";
 @import "main-nav.scss";
+@import "main.scss";
 @import "button.scss";
 @import "intro.scss";
 @import "contact-list.scss";
@@ -33,3 +34,9 @@
 @import "pagination.scss";
 @import "calendar.scss";
 @import "alphabet.scss";
+@import "continents.scss";
+@import "companions-selection.scss";
+@import "level-filter.scss";
+@import "filtered.scss";
+@import "flag-list.scss";
+@import "countries-filter.scss";
