--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -21,9 +21,13 @@ $special-blue: #132576;
 $special-grey-light: #f3f4f8;
 $special-grey-borders: #cbced9;
 $special-orange-borders: #ff5c23;
+$special-yellow-grey-borders: #f3c72b;
+$special-blue-grey: #d6daed;
+$special-blue-grey-light: #e2e5f2;
 $special-grey-opacity: rgba($special-grey, 0.6);
 $special-black-opacity: rgba($black, 0.3);
 $special-blue-dark-opacity: rgba($basic-blue-dark, 0.3);
+$special-midnight-opacity: rgba($special-midnight, 0.3);
 
 // shadows
 $popup-shadow: rgba(29, 46, 91, 0.14);
