Внес правки после ревью

--- a/source/sass/page-body.scss
+++ b/source/sass/page-body.scss
@@ -20,6 +20,10 @@
   padding: 62px 0 0 0;
 }
 
+.page-body__section-title {
+  @include title;
+}
+
 .page-body__contacts {
   background-color: $basic-blue;
 }
