--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -31,3 +31,7 @@ $special-midnight-opacity: rgba($special-midnight, 0.3);
 
 // shadows
 $popup-shadow: rgba(29, 46, 91, 0.14);
+// resolutions
+$mobile-width: 320px;
+$tablet-width: 768px;
+$desctop-width: 1440px;
