--- a/source/sass/contact-list.scss
+++ b/source/sass/contact-list.scss
@@ -1,11 +1,30 @@
 .contact-list {
   @include flex;
   @include flex-center;
+
+  @media (min-width: $desctop-width) {
+    display: none;
+    padding: 0;
+  }
+}
+
+.contact-list--interested-section {
+  @media (min-width: $desctop-width) {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .contact-list__item--menu-open {
   flex-basis: 100%;
   padding-left: 25px;
+
+  @media (min-width: $desctop-width) {
+    @include flex;
+    @include flex-center;
+    flex-basis: 50%;
+    padding: 0;
+  }
 }
 
 .contact-list__link {
@@ -15,6 +34,11 @@
   font-weight: bold;
   line-height: 18px;
   color: $special-midnight;
+
+  @media (min-width: $tablet-width) {
+    font-size: 28px;
+    line-height: 28px;
+  }
 }
 
 .contact-list__image {
