--- a/source/sass/directions.scss
+++ b/source/sass/directions.scss
@@ -1,29 +1,146 @@
 .directions {
-  @include outline;
-
   background-color: $basic-blue-light;
   padding: 71px 25px 29px 25px;
   color: $basic-blue;
   border-radius: 25px;
+
+  @media (min-width: $tablet-width) {
+    padding: 71px 76px 80px 76px;
+    background-image: url("../img/flags-back.png");
+    background-repeat: no-repeat;
+    background-position: top 100px right 40px;
+  }
+
+  @media (min-width: $desctop-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(3, auto);
+    align-items: baseline;
+    gap: 0 100px;
+    padding: 100px 130px 138px 130px;
+  }
 }
 
 .directions__list {
+  grid-template-columns: 1fr;
   padding-bottom: 25px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 21px;
+  }
+
+  @media (min-width: $desctop-width) {
+    grid-row: 1 / -1;
+  }
+}
+
+.directions__item {
+  display: grid;
+  grid-template-columns: minmax(min-content, 1fr);
+  grid-template-rows: auto 15px auto;
+  margin-bottom: 10px;
+
+  @media (min-width: $tablet-width) {
+    grid-template-columns: 1fr auto;
+    grid-template-rows: 1fr;
+  }
 }
 
 .directions__content {
+  @include flex;
+
+  position: relative;
+  grid-column: 1;
+  grid-row: 2 / -1;
+  justify-content: space-between;
+  align-items: center;
   padding: 26px 24px 24px 24px;
   border-radius: 10px;
   background-color: $white;
+
+  @media (min-width: $tablet-width) {
+    border-radius: 20px 0 0 20px;
+    grid-row: 1;
+  }
 }
 
-.direction__heading {
+.directions__heading {
   font-weight: bold;
   font-size: 21px;
   line-height: 21px;
+  margin: 0;
   color: $black;
+}
+
+.directions__info {
+  color: $special-grey;
+
+  @media (min-width: $tablet-width) {
+    font-size: 28px;
+    line-height: 33px;
+    margin-bottom: 104px;
+    padding-right: 270px;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+    margin: 0;
+  }
 }
 
 .directions__text {
   font-weight: 300;
+  margin: 0;
+  color: $special-grey-opacity;
+  flex-basis: 100%;
+}
+
+.directions__counter {
+  color: $special-grey-opacity;
+
+  @media (min-width: $tablet-width) {
+    flex-basis: 100%;
+  }
+}
+
+.directions__flag {
+  position: absolute;
+  top: -12px;
+  left: 25px;
+
+  @media (min-width: $tablet-width) {
+    left: initial;
+    right: -20px;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+}
+
+.directions__image-container--thailand {
+  background: url("../img/thailand-mobile.png");
+}
+
+.directions__image-container--french {
+  background: url("../img/france-mobile.png");
+}
+
+.directions__image-container--czech {
+  background: url("../img/czech-mobile.png");
+}
+
+.directions__image-container {
+  padding-top: 110px;
+  grid-row: 1 / 3;
+  grid-column: 1;
+  background-repeat: no-repeat;
+  background-size: 100%;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 2;
+    grid-row: 1;
+    border-radius: 0 20px 20px 0;
+    padding: 140px 184px 0 0;
+    background-size: cover;
+    background-position: center;
+  }
 }
