--- a/source/sass/interested.scss
+++ b/source/sass/interested.scss
@@ -1,14 +1,33 @@
 .interested {
-  @include outline;
-
   background-color: $special-midnight;
-  padding: 72px 0 16px 0;
   text-align: center;
   border-radius: 20px;
+  padding: 72px 25px 45px 25px;
+
+  @media (min-width: $tablet-width) {
+    padding: 72px 75px 45px 75px;
+  }
+
+  @media (min-width: $desctop-width) {
+    padding: 109px 130px 103px 130px;
+  }
 }
 
 .interested__title {
   @include title;
+
+  @media (min-width: $tablet-width) {
+    font-size: 45px;
+    line-height: 45px;
+  }
+}
+
+.interested__text {
+  @media (min-width: $tablet-width) {
+    font-size: 28px;
+    line-height: 32px;
+    margin-bottom: 65px;
+  }
 }
 
 .interested__button {
