--- a/source/sass/main-nav.scss
+++ b/source/sass/main-nav.scss
@@ -1,9 +1,24 @@
 .main-nav {
   padding-bottom: 50px;
+
+  @media (min-width: $tablet-width) {
+    padding-bottom: 0;
+  }
+
+  @media (min-width: $desctop-width) {
+    position: absolute;
+    top: 55px;
+    left: 20%;
+  }
 }
 
 .main-nav__list {
   margin-bottom: 50px;
+
+  @media (min-width: $desctop-width) {
+    @include flex;
+    @include flex-center;
+  }
 }
 
 .main-nav__item {
@@ -12,4 +27,12 @@
   line-height: 35px;
   text-transform: uppercase;
   text-align: center;
+
+  @media (min-width: $desctop-width) {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 20px;
+    color: $white;
+    margin-right: 34px;
+  }
 }
