--- a/source/sass/page-header.scss
+++ b/source/sass/page-header.scss
@@ -1,9 +1,23 @@
 .page-header {
   padding: 28px 25px 52px 25px;
   background-color: $basic-blue;
+
+  @media (min-width: $tablet-width) {
+    padding: 40px;
+  }
+
+  @media (min-width: $desctop-width) {
+    padding: 46px 60px 0 60px;
+  }
 }
 
 .page-header--companions {
   border-radius: 0 0 26px 26px;
   padding-bottom: 10px;
+}
+
+.page-header__open-menu-button {
+  @media (min-width: $desctop-width) {
+    display: none;
+  }
 }
