--- a/source/sass/companions.scss
+++ b/source/sass/companions.scss
@@ -44,6 +44,10 @@
     font-size: 21px;
     line-height: 24px;
   }
+
+  @media (min-width: $desctop-width) {
+    justify-self: flex-start;
+  }
 }
 
 
