Изменил имя модификатора

--- a/source/sass/authorization.scss
+++ b/source/sass/authorization.scss
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-.authorization--hidden {
+.authorization--desctop-hidden {
   @media (min-width: $desctop-width) {
     display: none;
   }
